// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render a list of clickable items 1`] = `
<ul
  className="orizzonte__list"
>
  <li
    className="orizzonte__item"
    key="0"
  >
    <a
      className="orizzonte__item-clickable"
      href="#"
      onClick={[MockFunction]}
    >
      Filter 1
    </a>
  </li>
  <li
    className="orizzonte__item"
    key="1"
  >
    <a
      className="orizzonte__item-clickable"
      href="#"
      onClick={[MockFunction]}
    >
      Filter 2
    </a>
  </li>
</ul>
`;

exports[`<List /> should render a list of filters 1`] = `
<ul
  className="orizzonte__list"
>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="0/.0"
  >
    <Select
      disabled={false}
      fieldName="myAPIField"
      label="Test select"
      notSetLabel="None"
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="1/.1"
  >
    <Choices
      fieldName="myAPIField"
      label="Test multiple choices"
      multiple={true}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li>
    <button
      className="orizzonte__list-done"
      onClick={[Function]}
      type="button"
    >
      Done
    </button>
  </li>
</ul>
`;

exports[`<List /> should render a list of filters with custom done button and orientation 1`] = `
<ul
  className="orizzonte__list orizzonte__list--right"
>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="0/.0"
  >
    <Select
      disabled={false}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="1/.1"
  >
    <Choices
      fieldName="myAPIField"
      label="Test multiple choices"
      multiple={true}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li>
    <button
      className="orizzonte__list-done"
      onClick={[Function]}
      type="button"
    >
      Apply
    </button>
  </li>
</ul>
`;

exports[`<List /> should render a list of filters without done button 1`] = `
<ul
  className="orizzonte__list"
>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="0/.0"
  >
    <Select
      disabled={false}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="1/.1"
  >
    <Choices
      fieldName="myAPIField"
      label="Test multiple choices"
      multiple={true}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
</ul>
`;
